assets/css/style.scss
---
---

@import "{{ site.theme }}";
.page-header { color: #fff; text-align: center; background-color: #159957; background-image: url("/assets/background.jpg"); }

.topnav {
  background-color: #333;
  overflow: hidden;
  position: fixed;
  top: 0;
  width: 100%;
}

.topnavb {
  background-color: #333;
  overflow: hidden;
  top: 0;
  width: 100%;
}

.topnav a {
  float: left;
  color: #f2f2f2;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  font-size: 17px;
}

.topnav a:hover {
  background-color: #ddd;
  color: black;
}

